Add developer credit to footer
Add link to portfolio with website by Goodluck Jerome

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <body>
     <header>
         <h1>Smartest Auto Repair</h1>
-        <p>Quality Service Since 2010</p>
+        <p>Smart Solutions for Your Vehicle</p>
     </header>
 
     <nav>
@@ -60,7 +60,7 @@
     <div class="container">
         <section id="home">
             <h2>Welcome to Smartest Auto Repair</h2>
-            <p>Your trusted partner for all automotive needs. We provide reliable, affordable service with a smile.</p>
+            <p>Your smart choice for automotive care. We use the latest technology to provide fast, affordable service.</p>
             <img src="https://images.unsplash.com/photo-1503376780353-7e6692767b70?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="Auto Repair Shop" style="width:100%; max-width:600px; height:auto;">
         </section>
 
@@ -92,6 +92,9 @@
     </div>
 
     <footer>
+        <p style="text-align: center; margin-top: 20px;">
+            <a href="portfolio.html" style="color: white;">Website by Goodluck Jerome - Web Developer</a>
+        </p>
         <p>&copy; 2024 Smartest Auto Repair. All rights reserved.</p>
     </footer>
 </body>
